1. fix white space in home>whats next section

--- a/css/ThoughtsOn_grid.css
+++ b/css/ThoughtsOn_grid.css
@@ -140,8 +140,7 @@
 
   .col-6of8{
     width:100%;
-    margin-bottom: 2em;
-
+    margin-bottom: 1.5em;
   }
 }
 
