--- a/css/ThoughtsOn_style.css
+++ b/css/ThoughtsOn_style.css
@@ -125,7 +125,8 @@ a:hover{
 
 
 .home-text-group-3 p{
-  margin-top: 19.7em;
+  margin-top: 11em;
+  margin-bottom:-8.3em;
 }
 
 .blog-content p, .bio-content p, .product-content p, .product-details-content p{
